# Rust-API

./: Cargo.toml  README.md  Rust-API.postman_collection.json  docker-compose.yml
src/: main.rs
src/config/: db.rs
src/handlers/: general_handler.rs  mod.rs  user_handler.rs
src/models/: user.rs
src/responses/: generic_responses.rs  mod.rs  user_responses.rs
src/routes/: general.rs  infos.rs  mod.rs  users.rs
src/utils/: enums.rs
